# py-ai

./: .dockerignore  .env.enterprise.example  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  Makefile  README.md  demo_capstone.py  docker-compose.yml  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
.harness/pipelines/: py-ai-pipeline.yaml
demo_docs/: company_handbook.md  project_guidelines.md
docs/: ARCHITECTURE.md  CAPSTONE.md  DEVELOPMENT_WORKFLOW.md  ENTERPRISE_ROADMAP.md
guides/: DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SETUP_ENTERPRISE.md  DEPLOYMENT_SETUP_STAGING.md  HTTPIE_QUICKSTART.md  HTTPIE_TESTING_GUIDE.md  LOCAL_DEVELOPMENT_GUIDE.md  MANUAL_TESTING_GUIDE.md
scripts/: compare_agents.py  httpie-aliases.sh  httpie-context7-demo.sh  py-dev-workflow.sh  run_agent_evals.py  run_evals.py  run_ragas.py  run_web_evals.py
src/app/: __init__.py  agent_memory.py  agent_service.py  ai_service.py  celery_app.py  config.py  dependencies.py  document_service.py  hybrid_agent_service.py  logging_middleware.py  main.py  middleware_guardrails.py  pydantic_agent_service.py  rag_service.py  routers.py  routers_agent.py  routers_ai.py  routers_chat.py  routers_docs.py  routers_hybrid_agent.py  routers_pydantic_agent.py  routers_rag.py  routers_smart_orchestrator.py  routers_tasks.py  schemas.py  smart_orchestrator.py  tasks.py  telemetry.py  text_splitter.py  utils.py  web_search.py
src/app/database/: mongodb_adapter.py  postgres_adapter.py  vector_adapters.py
src/app/providers/: anthropic_provider.py  base.py  ollama_provider.py  openai_provider.py
src/py_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
terraform/environments/staging/: main.tf  terraform.tfvars.example  variables.tf
terraform/modules/py-ai-platform/: main.tf  variables.tf
tests/: conftest.py  test_agent.py  test_agent_service.py  test_enterprise_database.py  test_enterprise_integration.py  test_extract_user.py  test_guardrails.py  test_health.py  test_rag.py  test_request_id.py  test_tasks.py  test_utils.py
tests/golden/: agent_golden.json  golden.json  web_golden.json
