[project]
name = "py-ai"
version = "0.1.0"
description = "Python AI learning project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.4.0",
    "openai>=1.43.0",
    "httpx>=0.27.0",
    "instructor>=1.3.0",
    "anthropic>=0.34.0",
    "chromadb>=0.5.4",
    "sentence-transformers>=3.0.1",
    "email-validator>=2.0.0",
    "pytest>=8.2.0",
    "requests>=2.32.0",
    "ragas>=0.1.6",
    "datasets>=2.19.0",
    "langchain>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.6.9",
    "pre-commit>=3.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S", "C4", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"


