[project]
name = "py-ai"
version = "0.1.0"
description = "Python AI learning project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.4.0",
    "openai>=1.43.0",
    "httpx>=0.27.0",
    "instructor>=1.3.0",
    "anthropic>=0.34.0",
    "chromadb>=0.5.4",
    "sentence-transformers>=3.0.1",
    "email-validator>=2.0.0",
    "pytest>=8.2.0",
    "requests>=2.32.0",
    "ragas>=0.1.6",
    "datasets>=2.19.0",
    "langchain>=0.2.0",
    "langgraph>=0.2.30",
    "celery[redis]>=5.4.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-instrumentation-httpx>=0.41b0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "python-multipart>=0.0.6",
    "pypdf>=4.3.0",
    "pydantic-ai>=1.9.0",
    "ag-ui-protocol>=0.1.9",
    # Enterprise Database Drivers
    "motor>=3.5.0",  # MongoDB async driver
    "asyncpg>=0.29.0",  # PostgreSQL async driver
    "redis>=5.0.0",  # Redis driver
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.6.9",
    "pre-commit>=3.8.0",
]
agent = [
    "redis>=5.0.0",
]
# Vector Database Providers
vertex = [
    "google-cloud-aiplatform>=1.40.0",
    "google-cloud-storage>=2.10.0",
]
snowflake = [
    "snowflake-connector-python>=3.0.0",
]
cockroach = [
    "asyncpg>=0.29.0",  # CockroachDB uses PostgreSQL protocol
    "psycopg2-binary>=2.9.0",  # For connection pooling
]
# Enterprise Features
enterprise = [
    "google-cloud-aiplatform>=1.40.0",
    "snowflake-connector-python>=3.0.0",
    "psycopg2-binary>=2.9.0",
    "prometheus-client>=0.19.0",  # Metrics
    "structlog>=23.2.0",  # Enhanced logging
]
# All optional dependencies
all = [
    "google-cloud-aiplatform>=1.40.0",
    "snowflake-connector-python>=3.0.0",
    "psycopg2-binary>=2.9.0",
    "prometheus-client>=0.19.0",
    "structlog>=23.2.0",
    "pytest>=8.2.0",
    "ruff>=0.6.9",
    "pre-commit>=3.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S", "C4", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # Allow assertions in test files
"demo_capstone.py" = ["S112"]  # Allow try-except-continue in demo
"src/app/routers_*.py" = ["B008", "B904", "F841", "E501"]  # Allow FastAPI patterns and long lines
"src/app/providers/*.py" = ["F841", "S113", "E501"]  # Allow dev code patterns and long lines
"src/app/document_service.py" = ["SIM105", "S110"]  # Allow cleanup patterns
"src/app/tasks.py" = ["B904"]  # Allow exception patterns in tasks

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "psutil>=7.1.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.14.2",
]
enterprise = [
    "google-cloud-aiplatform>=1.40.0",
    "snowflake-connector-python>=3.0.0",
    "psycopg2-binary>=2.9.0",
    "prometheus-client>=0.19.0",
    "structlog>=23.2.0",
]
test = [
    "psutil>=7.1.2",
    "pytest-asyncio>=1.2.0",
]
